// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nav > renders collapsed 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_c935af"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_c935af"
    >
      <div
        class="_menuWrapper_c935af"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_f62762"
        >
          <li>
            <a
              aria-current="page"
              class="_link_f62762"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="_link_f62762"
              href="/about-us"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Nav > renders expanded 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_c935af _wrapperExpanded_c935af"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_c935af"
    >
      <div
        class="_menuWrapper_c935af"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_f62762"
        >
          <li>
            <a
              aria-current="page"
              class="_link_f62762"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="_link_f62762"
              href="/about-us"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
